// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

import "pbresource/resource.proto";
import "pbresource/annotations.proto";

package hashicorp.consul.multicluster.v1alpha1;

message ComputedExportedServices {
  option (hashicorp.consul.resource.spec) = {scope: SCOPE_NAMESPACE};

  repeated ComputedExportedService consumers = 1;
}

message ComputedExportedService {
  repeated hashicorp.consul.resource.ID target_refs = 1;
  repeated ComputedExportedServicesConsumer consumers = 3;
}

message ComputedExportedServicesConsumer {
  string name = 1;
  string namespace = 2;

  // no sameness group
  oneof consumer_tenancy {
    string peer = 3;
    string partition = 4;
  }
}